config/watcher/kyma_watcher.yaml
apiVersion: v1
kind: Service
metadata:
  name: controller-manager-events
spec:
  selector:
    app.kubernetes.io/name: lifecycle-manager
  ports:
    - protocol: TCP
      name: klm
      port: 8082
      targetPort: 8082
    - protocol: TCP
      name: kmm
      port: 8083
      targetPort: 8083
