config/watcher/operator_v1alpha1_watcher.yaml

apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: system
spec:
  selector:
    app.kubernetes.io/name: lifecycle-manager
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
