config/watcher/operator_v1beta2_watcher.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: kcp-system
spec:
  selector:
    app.kubernetes.io/name: lifecycle-manager
  ports:
    - protocol: TCP
      name: klm
      port: 8082
      targetPort: 8082
    - protocol: TCP
      name: kmm
      port: 8083
      targetPort: 8083
